--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Blog
-subtitle: Hitchhiker's guid to web development
+subtitle: A desire to the unknown
 ---
 
 <ul class="list-posts">
